--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container mt-5">
   <h3>投稿一覧</h3>
+  <% if flash.notice.present? %>
+    <%= flash.notice %>
+  <% end %>
   <%= link_to '新規登録', new_task_path, class: 'btn btn-primary' %>
 </div>
