--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,4 +4,19 @@
     <%= flash.notice %>
   <% end %>
   <%= link_to '新規登録', new_task_path, class: 'btn btn-primary' %>
+
+  <div class="col-md-8">
+    <table class="table table-hover">
+     <thead>
+       <th>名前</th>
+       <th>作成日</th>
+     </thead>
+     <% @tasks.each do |task| %>
+     <tbody>
+        <td><%= task.name %></td>
+        <td><%= task.created_at %></td>
+     </tbody>
+     <% end %>
+   </table>
+  </div>
 </div>
