--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,9 @@
      </thead>
      <% @tasks.each do |task| %>
      <tbody>
-        <td><%= task.name %></td>
+        
+        <td>
+            <%= link_to task.name, task_path(task) %></td>
         <td><%= task.created_at %></td>
      </tbody>
      <% end %>
