--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,31 @@
-h1 Tasks#show
-p Find me in app/views/tasks/show.html.slim
+<div class="container mt-5">
+  <h3>タスクの詳細</h3>
+  <div class="col-md-8">
+    <table class="table table-hover">
+      <tr>
+        <th></th>
+      <td></td>
+      </tr>
+      <tr>
+       <th>ID</th>
+       <td><%= @task.id %></td>
+      </tr>
+      <tr>
+       <th>名前</th>
+       <td><%= @task.name %></td>
+      </tr>
+      <tr>
+       <th>詳細</th>
+       <td><%= @task.description %></td>
+      </tr>
+      <tr>
+       <th>登録日時</th>
+       <td><%= @task.created_at %></td>
+      </tr>
+      <tr>
+       <th>更新日時</th>
+       <td><%= @task.updated_at %></td>
+      </tr>
+   </table>
+  </div>
+</div>
