--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,13 +10,14 @@
      <thead>
        <th>名前</th>
        <th>作成日</th>
+       <th></th>
      </thead>
      <% @tasks.each do |task| %>
      <tbody>
         
-        <td>
-            <%= link_to task.name, task_path(task) %></td>
+        <td><%= link_to task.name, task_path(task) %></td>
         <td><%= task.created_at %></td>
+        <td><%= link_to '編集', edit_task_path(task), class: 'btn btn-primary' %></td>
      </tbody>
      <% end %>
    </table>
