--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -27,5 +27,6 @@
        <td><%= @task.updated_at %></td>
       </tr>
    </table>
+    <%= link_to '編集', edit_task_path(@task), class: 'btn btn-primary' %>
   </div>
 </div>
