--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,9 @@
   <% if flash.notice.present? %>
     <%= flash.notice %>
   <% end %>
-  <%= link_to '新規登録', new_task_path, class: 'btn btn-primary' %>
+  <div>
+   <%= link_to '新規登録', new_task_path, class: 'btn btn-primary' %>
+  </div>
 
   <div class="col-md-8">
     <table class="table table-hover">
