--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,17 +1,5 @@
 <div class="container mt-5">
   <h3>編集</h3>
-  <%= form_with model: @task, local: true do |f| %>
-    <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control', id: 'task_name' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :description %>
-      <%= f.text_area :description, class: 'form-control', id: 'task_description' %>
-    </div>
-    <div class="form-group mt-2">
-      <%= f.submit "更新する", class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+  <%= render partial: 'form', locals: {task: @task} %>
 
 </div>
