--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,6 +13,7 @@
        <th>名前</th>
        <th>作成日</th>
        <th></th>
+       <th></th>
      </thead>
      <% @tasks.each do |task| %>
      <tbody>
@@ -20,6 +21,7 @@
         <td><%= link_to task.name, task_path(task) %></td>
         <td><%= task.created_at %></td>
         <td><%= link_to '編集', edit_task_path(task), class: 'btn btn-primary' %></td>
+        <td><%= link_to '消去', task, method: :delete, date: { confirm: "タスク「#{task.name}」を消去します。よろしいですか？"}, class: 'btn btn-primary' %></td>
      </tbody>
      <% end %>
    </table>
