--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,9 @@
 <div class="container mt-5">
   <h3>編集</h3>
   <%= render partial: 'form', locals: {task: @task} %>
+  <div>
+    
+  <%= link_to '消去', @task, method: :delete, date: { confirm: "タスク「#{@task.name}」を消去します。よろしいですか？"}, class: 'btn btn-primary mt-3' %>
+  </div>
 
 </div>
